[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yew-app"
path = "src/main.rs"

[lib]
name = "quantum"
path = "../../lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew ="0.19.3"
nalgebra = "0.31.3"
num-traits = "0.2.15"
rand = "0.8.2"
getrandom = { version = "0.2", features = ["js"] }